clusters/main/kubernetes/system/sonarqube/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
  labels:
    app.kubernetes.io/name: sonarqube
    app.kubernetes.io/part-of: sast
